# taskdog

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  Dockerfile  Dockerfile.demo  MIGRATION.md  Makefile  QUICKSTART.md  README.md  client.toml.example  config.toml.example  config.toml.template  docker-compose.yaml  flake.nix  pyproject.toml  server.toml.example  vulture_whitelist.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml  pre-commit-autoupdate.yml  release.yml
contrib/: README.md
contrib/aur/: .gitignore  PKGBUILD  README.md
contrib/docker/: .env.example  Dockerfile  README.md  docker-compose.yml
contrib/launchd/: taskdog-server.plist
contrib/systemd/: taskdog-server.service
contrib/windows/: README.md  install-service.ps1  uninstall-service.ps1
docs/: API.md  COMMANDS.md  CONFIGURATION.md  DESIGN_PHILOSOPHY.md  OPTIMIZATION_ARCHITECTURE.md  QUICKSTART.md  TEST_GUIDELINES.md  migration-guide.md
examples/: README.md  cli.toml  config.toml  core.toml  mcp.toml  note_template.md  server.toml
examples/config/: README.md
scripts/: __init__.py  bump_version.py  demo_data.json  demo_data.py  demo_data.sh  docker-demo-entrypoint.sh  migrate_json_to_sqlite.py  migrate_tags_to_normalized_schema.py  rollback_sqlite_to_json.py  vulture_whitelist.py
src/application/: __init__.py
src/application/constants/: __init__.py  optimization.py
src/application/dto/: __init__.py  archive_task_input.py  archive_task_request.py  base.py  cancel_task_input.py  cancel_task_request.py  complete_task_input.py  complete_task_request.py  create_task_input.py  create_task_request.py  gantt_output.py  gantt_result.py  get_task_by_id_output.py  log_hours_input.py  log_hours_request.py  manage_dependencies_input.py  manage_dependencies_request.py  optimization_output.py  optimization_result.py  optimization_summary.py  optimize_schedule_input.py  optimize_schedule_request.py  pause_task_input.py  pause_task_request.py  remove_task_input.py  remove_task_request.py  reopen_task_input.py  reopen_task_request.py  restore_task_input.py  restore_task_request.py  set_task_tags_input.py  set_task_tags_request.py  start_task_input.py  start_task_request.py  statistics_output.py  statistics_result.py  status_change_input.py  status_change_request.py  task_detail_dto.py  task_detail_output.py  (+7 more)
src/application/queries/: __init__.py  base.py  task_query_service.py  workload_calculator.py
src/application/services/: dependency_graph_service.py  estimated_duration_propagator.py  hierarchy_manager.py  hierarchy_operation_service.py  optimization_summary_builder.py  schedule_clearer.py  schedule_optimizer.py  schedule_propagator.py  task_filter.py  task_prioritizer.py  task_statistics_calculator.py  task_status_service.py  task_validator.py  workload_allocator.py
src/application/sorters/: __init__.py  optimization_task_sorter.py  task_sorter.py
src/application/use_cases/: add_dependency.py  archive_task.py  base.py  calculate_statistics.py  cancel_task.py  complete_task.py  create_task.py  get_task_detail.py  log_hours.py  optimize_schedule.py  pause_task.py  remove_dependency.py  remove_task.py  reopen_task.py  restore_task.py  set_task_tags.py  start_task.py  status_change_use_case.py  update_task.py
src/application/utils/: date_helper.py
src/application/validators/: __init__.py  datetime_validator.py  deadline_validator.py  dependency_validator.py  estimated_duration_validator.py  field_validator.py  numeric_field_validator.py  parent_id_validator.py  status_validator.py  validator_registry.py
src/domain/: constants.py
src/domain/entities/: task.py
src/domain/exceptions/: task_exceptions.py
src/domain/repositories/: __init__.py  task_repository.py
src/domain/services/: __init__.py  deadline_calculator.py  task_eligibility_checker.py  task_validator.py  time_tracker.py  workload_calculator.py
src/infrastructure/: api_client.py  holiday_checker.py
src/infrastructure/persistence/: file_notes_repository.py  json_task_repository.py  json_task_storage.py  notes_repository.py  (+3 more)
src/shared/: config_manager.py  constants.py  date_utils.py  server_manager.py  workday_utils.py  xdg_utils.py
src/taskdog/: __init__.py  cli.py
src/utils/: __init__.py  console_messages.py
tests/: __init__.py  test_archive_task_use_case.py  test_backward_allocator.py  test_backward_optimization_strategy.py  test_balanced_optimization_strategy.py  test_batch_executor.py  test_complete_task_use_case.py  test_config_manager.py  test_create_task_use_case.py  test_date_time_parser.py  test_earliest_deadline_optimization_strategy.py  test_estimated_duration_propagator.py  test_get_task_detail_use_case.py  test_greedy_forward_allocator.py  test_greedy_optimization_strategy.py  test_hierarchy_operation_service.py  test_json_task_repository.py  test_optimization_summary_builder.py  test_optimization_task_sorter.py  test_optimize_schedule_use_case.py  test_plan_command.py  test_priority_first_optimization_strategy.py  test_remove_task_use_case.py  test_schedule_propagator.py  test_start_task_use_case.py  test_status_validator.py  test_task_eligibility_checker.py  test_task_filter.py  test_task_prioritizer.py  test_task_query_service.py  test_task_sorter.py  test_task_status_service.py  test_time_tracker.py  test_today_filter.py  test_update_task_use_case.py  test_validator_registry.py  test_workload_allocator.py  test_workload_calculator.py  test_xdg_utils.py
tests/e2e/: conftest.py  harness.py  test_auth.py  test_concurrency.py  test_dependencies.py  test_executable.py  test_lifecycle.py  test_optimize.py  test_smoke.py  test_task_crud.py
tests/infrastructure/: test_holiday_checker.py
tests/shared/: test_date_time_parser.py  test_date_utils.py  test_holiday_checker.py  test_xdg_utils.py
vhs/: demo.tape  search.tape
(+340 files in other folders)
