[project]
name = "taskdog"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "click>=8.3.0",
  "fastapi>=0.115.0",
  "holidays>=0.60.0",
  "httpx>=0.27.0",
  "pydantic>=2.10.0",
  "python-dateutil>=2.8.0",
  "rich>=14.2.0",
  "sqlalchemy>=2.0.0",
  "textual>=0.88.0",
  "uvicorn[standard]>=0.32.0",
]

[project.scripts]
taskdog = "taskdog.cli:cli"

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-python-dateutil>=2.8.0",
  "types-sqlalchemy",
  "coverage>=7.0.0",
]

# mypy configuration
[tool.mypy]
python_version = "3.13"
mypy_path = "src"
# Progressive type checking - Phase 3: Moderate strictness
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
# Phase 3: Moderate checks enabled
check_untyped_defs = true
strict_equality = true
warn_return_any = true
warn_no_return = true
# Phase 4: Full strictness enabled
disallow_untyped_defs = true  # Phase 4 (enabled)
disallow_any_generics = true  # Phase 4 (enabled)
disallow_untyped_calls = true  # Phase 4 (enabled)
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["presentation.api.*", "infrastructure.api_client", "shared.server_manager"]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
check_untyped_defs = false

# Ignore third-party library without type stubs
[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "holidays.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

# Temporarily ignore complex modules with many type issues for Phase 2
# These will be fixed in Phase 3
[[tool.mypy.overrides]]
module = [
  "application.services.optimization_summary_builder",
  "application.sorters.optimization_task_sorter",
  "application.sorters.task_sorter",
  "application.queries.filters.today_filter",
  "application.queries.task_query_service",
  "presentation.renderers.rich_renderer_base",
  "presentation.renderers.rich_table_renderer",
  "presentation.renderers.rich_gantt_renderer",
  "presentation.cli.commands.*",
  "presentation.tui.app",
  "presentation.tui.widgets.*",
  "presentation.tui.screens.algorithm_selection_screen",
  "infrastructure.persistence.database.*",
  "infrastructure.persistence.mappers.task_db_mapper",
]
ignore_errors = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C90",  # mccabe
  "N",  # pep8-naming
  "SIM",  # simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

# Per-file ignores for complex functions that need refactoring
[tool.ruff.lint.per-file-ignores]
"src/application/services/optimization_summary_builder.py" = ["C901"]
"src/domain/services/workload_calculator.py" = ["C901"]
"src/infrastructure/persistence/json_task_repository.py" = ["C901"]
"src/presentation/renderers/rich_gantt_renderer.py" = ["C901"]
"src/domain/exceptions/task_exceptions.py" = [
  "N818",
]  # TaskNotFoundException is widely used
"tests/**/*.py" = ["SIM115", "RUF015"]  # Test code patterns are acceptable
"scripts/**/*.py" = ["B904", "C901"]  # Migration scripts: exception chaining and complexity acceptable

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = [
  "taskdog",
  "domain",
  "application",
  "infrastructure",
  "presentation",
  "shared",
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.setuptools]
packages = [
  # Core CLI
  "taskdog",
  # Clean Architecture packages
  "domain",
  "domain.entities",
  "domain.services",
  "domain.repositories",
  "domain.exceptions",
  "application",
  "application.constants",
  "application.dto",
  "application.queries",
  "application.queries.filters",
  "application.services",
  "application.services.optimization",
  "application.sorters",
  "application.use_cases",
  "application.utils",
  "application.validators",
  "infrastructure",
  "infrastructure.persistence",
  "infrastructure.persistence.database",
  "infrastructure.persistence.database.models",
  "infrastructure.persistence.mappers",
  "presentation",
  "presentation.api",
  "presentation.api.models",
  "presentation.api.routers",
  "presentation.cli",
  "presentation.cli.commands",
  "presentation.console",
  "presentation.constants",
  "presentation.controllers",
  "presentation.enums",
  "presentation.exporters",
  "presentation.mappers",
  "presentation.presenters",
  "presentation.renderers",
  "presentation.utils",
  "presentation.view_models",
  "presentation.tui",
  "presentation.tui.commands",
  "presentation.tui.forms",
  "presentation.tui.palette",
  "presentation.tui.screens",
  "presentation.tui.services",
  "presentation.tui.widgets",
  "shared",
  "shared.click_types",
  "shared.constants",
  "shared.utils",
]
package-dir = { "" = "src" }

[tool.setuptools.package-data]
"presentation.tui" = ["styles/*.tcss"]
