[project]
name = "taskdog-workspace"
version = "0.4.0"
description = "Taskdog monorepo workspace"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Kohei Wada" }
]
license = { text = "MIT" }

# This is a workspace root - install individual packages from packages/ directory
dependencies = []

[project.optional-dependencies]
dev = [
  "pre-commit>=3.6.0",
  "ruff>=0.3.0",
  "mypy>=1.8.0",
  "types-python-dateutil>=2.8.0",
  "types-sqlalchemy",
  "coverage>=7.0.0",
]

# UV workspace configuration
[tool.uv.workspace]
members = [
    "packages/taskdog-core",
    "packages/taskdog-server",
    "packages/taskdog-ui",
]

[tool.uv.sources]
taskdog-core = { workspace = true }
taskdog-server = { workspace = true }
taskdog-ui = { workspace = true }

# mypy configuration
[tool.mypy]
python_version = "3.13"
mypy_path = "packages/*/src"
# Progressive type checking - Phase 3: Moderate strictness
warn_unused_configs = true
warn_redundant_casts = true
# Disabled: SQLAlchemy attr-defined errors are environment-dependent (CI vs local)
warn_unused_ignores = false
# Phase 3: Moderate checks enabled
check_untyped_defs = true
strict_equality = true
warn_return_any = true
warn_no_return = true
# Phase 4: Full strictness enabled
disallow_untyped_defs = true  # Phase 4 (enabled)
disallow_any_generics = true  # Phase 4 (enabled)
disallow_untyped_calls = true  # Phase 4 (enabled)
show_error_context = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["taskdog_server.api.*", "taskdog_server.main", "taskdog.infrastructure.api_client", "taskdog.shared.server_manager"]
disallow_untyped_defs = false
disallow_any_generics = false
disallow_untyped_calls = false
check_untyped_defs = false

# Ignore third-party library without type stubs
[[tool.mypy.overrides]]
module = "textual.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dateutil.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "holidays.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sqlalchemy.*"
ignore_missing_imports = true

# Temporarily ignore complex modules with many type issues for Phase 2
# These will be fixed in Phase 3
[[tool.mypy.overrides]]
module = [
  "taskdog_core.application.services.optimization_summary_builder",
  "taskdog_core.application.sorters.optimization_task_sorter",
  "taskdog_core.application.sorters.task_sorter",
  "taskdog_core.application.queries.filters.today_filter",
  "taskdog_core.application.queries.task_query_service",
  "taskdog.renderers.rich_renderer_base",
  "taskdog.renderers.rich_table_renderer",
  "taskdog.renderers.rich_gantt_renderer",
  "taskdog.cli.commands.*",
  "taskdog.tui.app",
  "taskdog.tui.widgets.*",
  "taskdog.tui.screens.algorithm_selection_screen",
  "taskdog_core.infrastructure.persistence.database.*",
  "taskdog_core.infrastructure.persistence.mappers.task_db_mapper",
]
ignore_errors = true

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "C90",  # mccabe
  "N",  # pep8-naming
  "SIM",  # simplify
  "RUF",  # ruff-specific rules
]
ignore = [
  "E501",  # line too long (handled by formatter)
]

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"packages/taskdog-core/src/taskdog_core/domain/exceptions/task_exceptions.py" = [
  "N818",
]  # TaskNotFoundException is widely used
"packages/*/tests/**/*.py" = ["SIM115", "RUF015"]  # Test code patterns are acceptable
"scripts/**/*.py" = ["B904", "C901"]  # Migration scripts: exception chaining and complexity acceptable
"packages/taskdog-server/src/taskdog_server/api/error_handlers.py" = ["UP047"]  # Type parameters require Python 3.12+

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = [
  "taskdog",
  "taskdog_core",
  "taskdog_server",
]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

# Build system - workspace root doesn't build directly
[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"
